Fix overflow in small frame sizes

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
         }
         .full-height {
             height: 100vh;
-            overflow: auto;
         }
         .bio-pic {
             width: 200px;
@@ -26,7 +25,6 @@
         .w3-content {
             width: 75%;
             max-width: 600px;
-            
         }
         .w3-bar-item:hover, .title-bar {
             border-bottom: 5px teal solid !important;
@@ -120,6 +118,7 @@
                 width:100%;
                 position: fixed;
                 top: 0;
+                overflow-y: hidden;
             }
             .w3-top {
                 display: none;
